assets/css/main.css
/* ... */
#contenidoin{
	width:1000px;
	height:449px;
	background-image:url(../img/bg/mainbg.png);
	background-repeat:no-repeat;
	margin:0 auto 10px;
	padding: 25px;
	z-index: -1;
}

.contenidohome {padding: 10px !important; height: 479px !important;}

div#box{display: none;}

div.fotobg{ background: url(../img/bg/fotobg.png) no-repeat;  width: 323px; max-width: 323px; height: 452px; z-index: 999; position: absolute; top: -7px; left: 540px;}


div.menuActividad{ background: url(../img/bg/menuActividad.png) no-repeat;  width: 374px; max-width: 374px; height: 165px; z-index: 1; position: absolute; top: -4px; left: -5px;}


.fotobg label{ text-align: left; padding-left: 33px;}
div.fotobg h1{ width: 253px; padding: 90px 30px 0; font-size: 20px; font-weight: 500; text-align: left;}
.fotologin{cursor: pointer; z-index: 22; position: relative;}

.whiteback{ background: #fff;}

textarea.participa {
resize: none;
width: 509px;
border: 1px #A3A3A3 solid;
height: 26px;
background: white url(../img/icons/participa.png) no-repeat;
background-position: 15px 3px;
padding-left: 50px;
padding-right: 120px;
padding-top: 3px;
font-size: 20px;
position: absolute;
left: 0;
z-index: 800;}

div#participa{display: inline-block; width: 681px; height: 36px;}
div.inputimg{display: inline-block; width: 235px;}

.border5{ border-radius: 5px; moz-border-radius:5px;}

.separadorbarra { background: url(../img/lines/separadorbarra.gif); width: 2px; height: 54px;}

.temporaldrop{background: #F0F0F0;
width: 288px;
height: 31px;
text-align: left;
padding-left: 7px;
padding-top: 3px;
font-size: 20px;
background-size: 100%;
border: 1px solid #999;
position: absolute;
right: 21px;
overflow: hidden;
cursor: pointer;
z-index: 802;
 }

.plabel, .biglabel { font-size: 18px; font-style: normal;}
.acerca, .acerca2{ border: 1px #CCCCCC solid; height: 405px; width: 946px;}
.acerca2{background-color:#FFF;}
.acercaleft{border-right: 1px #CCCCCC solid; height: 405px; width: 273px; }
.acercaleft2{ height: 405px; margin-left: 20px; margin-top: 20px; width: 251px;}


.pestanas{ font-size: 17px; font-family: 'source_sans_prolight'; border: 1px #CCCCCC solid; padding: 5px 0; width: 271px;}
.pestanas2{ font-size: 23px; font-family: 'source_sans_prolight'; border-bottom: 1px #CCCCCC solid; padding: 8px 0; width: 251px; background:url("../img/btns/directorioon2.png") no-repeat; background-position: 235px 17px; text-align:left;}
.pestanas a {font-size: 17px; font-family: 'source_sans_prolight'; }
.pestanas2 a {font-size: 17px; font-family: 'source_sans_prolight'; padding-left:5px;}
.pestanas.on{background:url("../img/btns/directorioon.png") no-repeat #B54949; background-position: 240px 11px; }
.pestanas2.on{background:url("../img/btns/directorioon.png") no-repeat #B54949; background-position: 235px 17px; text-align:left;}
.pestanas2.on a{color:#FFF; padding-left:5px;}
#directoriohead span{ color: #A92626;}
#directoriohead { color: #333333; font-size: 20px;}

.directorioin{ padding: 30px; height: 311px; width: 612px !important;}

.font13{ font-size: 13px;}
.font16{ font-size: 16px;}

.directorioin{ }
.directorioperfil p { text-align: left;}
.directorioperfil h2{ text-align: left; font-family: 'source_sans_prolight';}
.directorioin h1{font-size: 33px; font-family: 'source_sans_prolight';}

.enlinea{ background: url(../img/misc/greendot.png) no-repeat;
display: inline-block;
background-position: center left;
padding-left: 10px;}

.directoriocontenido h2{ color: #333333; font-size: 17px; font-weight: bold; text-align: left;}
.directoriocontenido ul li{ color: #333333; font-size: 17px;  text-align: left;}
.pestanasBusqueda a{ display: block; padding-top: 11px;}
.pestanasBusqueda{background:#E1E1E1; z-index: 0; position: relative; display: inline-block; width: 121px; height: 40px; border-radius: 10px 10px 0px 0px; border:#CCCCCC solid 1px; border-bottom: 0; }
.pestanasBusqueda.on{background:#F7F7F7; z-index: 1; position: relative; }

.semibold{font-family: 'source_sans_prosemibold'}
.prolight{font-family: 'source_sans_prolight';}
.font22{font-size: 22px;}
.font20{font-size: 20px;}
.font11{font-size: 11px;}
.font18{font-size: 18px;}
.font17{font-size: 17px !important;}
.bold{ font-weight: bold;}
.gray{color: #666666;}

.searchtop{ border-bottom: solid 1px #CCCCCC; text-align: left;}
.separadorV64{ width: 1px; height: 64px; background: #cccccc;}

.busquedaop{ padding-top: 18px;}
.busquedaop div{ margin-right: 15px;}

.ff31{background: #fff; margin-left: 20px; width: 349px; height: 104px; font-family: 'source_sans_prolight'; text-align: left; padding: 10px; }
.ff31 h1{ font-size: 20px; margin-top: 5px;}
.ff31 p{font-size: 13px; line-height: 5px; margin-left: 30px;}
.ff31 h2{ font-size: 13px;}

.ff244{background: white;
width: 225px;
height: 92px;
font-family: 'source_sans_prolight';
text-align: left;
padding: 12px; margin-left: 15px;}
.ff244 h1{ font-size: 16px;  margin-bottom: 1px; }
.ff244 p{font-size: 13px; line-height: 18px; margin-left: 5px; font-family: 'source_sans_proregular'}
.ff244 h2{ font-size: 13px;}
.ff244 .more{position:absolute; bottom:4px !important; right:4px !important;}

.more{position:absolute; bottom:10px; right:20px;}


.ff32{background: #fff; margin-left: 10px; width: 283px; height: 209px; font-family: 'source_sans_prolight'; text-align: left; padding: 10px; }
.ff32 h1{ font-size: 18px; text-align: center; margin-top: 5px;}
.ff32 p{font-size: 18px; line-height: 20px; margin-left: 10px;}
.ff32 h2{ font-size: 17px; margin-top: 30px; border-bottom: 1px solid #ccc; border-top: 1px #ccc solid; width: 93%; margin-left: 10px;}

.ff31 .more{position:absolute; bottom:10px; right:20px;}

#actreciente { width: 30px; padding: 10px; border-top: 2px #ccc solid; border-bottom: 2px #ccc solid; border-left: 2px #ccc solid;}
#actreciente img{ display: block; cursor: pointer; z-index: 22; position: relative; top:9px;}

.searchresults{ padding: 20px 0; }
.logrosp {font-family: 'source_sans_prolight'; font-size: 17px; text-align: left;}
/* ... */

